Fixed porfolio cases title alignment

--- a/components/HomeCommon/Works/Work/FieldsWrapper/styles.module.scss
+++ b/components/HomeCommon/Works/Work/FieldsWrapper/styles.module.scss
@@ -10,6 +10,7 @@
   font-style: normal;
   line-height: 1.2;
   color: $white;
+  width: 100%;
 
   &.home {
     @include fontSize(56px);
