--- a/components/HomeCommon/Works/Work/styles.module.scss
+++ b/components/HomeCommon/Works/Work/styles.module.scss
@@ -96,6 +96,7 @@
     }
 
     & > div {
+      width: 100%;
       max-width: 650px;
       height: 100%;
       opacity: 1;
